--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 # Definieer de poort waarop Nginx moet luisteren
 listen 8080;
 root /webserver/www;
+client_max_body_size 100M;
 
 server {
     # Definieer het hostadres en poortnummer voor dit serverblok
@@ -11,9 +12,6 @@ server {
     # Definieer de locatie van de standaardfoutpagina's
     error_page 404 /404.html;
     error_page 500 502 503 504 /50x.html;
-
-    # Definieer de limiet voor de grootte van het client request body
-    # client_max_body_size 10M;
 
     # Definieer de locatie van de standaardbestanden voor directorylisting
     index index.html;
@@ -35,8 +33,12 @@ server {
     root /pad/naar/hoofdmap;
     server_name example.com;
 
+#     # Autoindexering van mappen inschakelen
+    autoindex off;
+
 #     # Definieer de locatie van specifieke routes
     location / {
+        autoindex off;
         allow GET; #dit is een comm;;;entaarregel;
         allow POST;
         allow DELETE; #dit is een commentaarregel
@@ -56,7 +58,7 @@ server {
     }
 
 #     # Voer CGI-scripts uit op basis van de bestandsextensie
-    location ~ \.php$ {
+    location ~ \.py$ {
         fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
