--- a/nginx.conf
+++ b/nginx.conf
@@ -44,6 +44,11 @@ server {
         allow DELETE; #dit is een commentaarregel
     }
 
+#     # Definieer de locatie van specifieke routes
+    location /cgi-bin/ {
+        alias /usr/lib/cgi-bin/;
+    }
+
     location /files/photos {
         allow GET; #dit is een comm;;;entaarregel;
         allow POST;
