--- a/nginx.conf
+++ b/nginx.conf
@@ -44,9 +44,12 @@ server {
         allow DELETE; #dit is een commentaarregel
     }
 
-#     # Definieer de locatie van specifieke routes
-    location /cgi-bin/ {
+    location .py {
         alias /usr/lib/cgi-bin/;
+    }
+
+    location /redirect/ {
+        redirect https://www.google.com;
     }
 
     location /files/photos {
