--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 # Definieer de poort waarop Nginx moet luisteren
 listen 8080;
 root /webserver/www;
-client_max_body_size 100M;
+# client_max_body_size 100M;
 
 server {
     # Definieer het hostadres en poortnummer voor dit serverblok
@@ -32,6 +32,7 @@ server {
 #     # Definieer de locatie van de hoofdmap van je website
     root /pad/naar/hoofdmap;
     server_name example.com;
+    uploads_dir /files/uploads;
 
 #     # Autoindexering van mappen inschakelen
     autoindex off;
