--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,8 @@ server {
     # Definieer het hostadres en poortnummer voor dit serverblok
     listen 8080;
     server_name _;
-    root /Users/dkramer/WEBSERVfolder/webserv;
+    root /home/dkramer/Documents/WEBSERVfolder/webserv;
+    autoindex on;
 
     # Definieer de locatie van de standaardfoutpagina's
     error_page 405 /405.html;
@@ -35,7 +36,7 @@ server {
     uploads_dir /files/uploads;
 
 #     # Autoindexering van mappen inschakelen
-    autoindex off;
+    autoindex on;
 
 #     # Definieer de locatie van specifieke routes
     location / {
