cgi handling from parser start

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,10 @@ server {
     error_page 405 /405.html;
     error_page 500 502 503 504 /50x.html;
 
+    location .py {
+        alias /home/dkramer/Documents/WEBSERVfolder/cgi-bin/;
+    }
+
     # Definieer de locatie van de standaardbestanden voor directorylisting
     index index.html;
 
@@ -47,7 +51,7 @@ server {
     }
 
     location .py {
-        alias /usr/lib/cgi-bin/;
+        alias /home/dkramer/Documents/WEBSERVfolder/cgi-bin/;
     }
 
     location /redirect/ {
