--- a/nginx.conf
+++ b/nginx.conf
@@ -35,16 +35,18 @@ server {
     listen 8070;
 
 #     # Definieer de locatie van de hoofdmap van je website
-    root /pad/naar/hoofdmap;
+    root  /home/dkramer/Documents/WEBSERVfolder/webserv;
     server_name example.com;
     uploads_dir /files/uploads;
 
 #     # Autoindexering van mappen inschakelen
     autoindex on;
 
+    index src/http/directory.html;
 #     # Definieer de locatie van specifieke routes
-    location / {
+    location /{
         autoindex off;
+        allow GET;
         allow DELETE; #dit is een commentaarregel
     }
 
