--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ server {
     # Definieer het hostadres en poortnummer voor dit serverblok
     listen 8080;
     server_name _;
-    root /home/cpost/Desktop/webserv;
+    root /home/rvan-mee/projects/webserv;
     autoindex on;
 
     # Definieer de locatie van de standaardfoutpagina's
@@ -15,13 +15,15 @@ server {
     error_page 500 502 503 504 /50x.html;
 
     location .py {
-        alias /home/cpost/Desktop/webserv/cgi-bin/;
+        alias /home/rvan-mee/projects/webserv/cgi-bin/;
     }
 
     # Definieer de locatie van de standaardbestanden voor directorylisting
     index index.html;
-    
-    redirect https://www.google.com;
+
+    location /redirect {
+        redirect https://www.google.com;
+    }
 
     # Definieer eventuele andere standaard configuraties
 
@@ -37,7 +39,7 @@ server {
     listen 8070;
 
 #     # Definieer de locatie van de hoofdmap van je website
-    root  /home/cpost/Desktop/webserv;
+    root  /home/dkramer/Documents/WEBSERVfolder/webserv;
     server_name example.com;
     uploads_dir /files/uploads;
 
@@ -53,12 +55,11 @@ server {
     }
 
     location .py {
-        alias /home/cpost/Desktop/webserv/cgi-bin/;
+        alias /home/dkramer/Documents/WEBSERVfolder/cgi-bin/;
     }
 
-    location /redirect/ {
-        redirect https://www.google.com;
-    }
+
+    redirect https://www.google.com;
 
     location /files/photos {
         allow GET; #dit is een comm;;;entaarregel;
