error fixed POST requests

--- a/nginx.conf
+++ b/nginx.conf
@@ -69,7 +69,7 @@ server {
 
 #     # Definieer de locatie van de hoofdmap van je website
     root  /home/dkramer/Documents/WEBSERVfolder/webserv;
-    server_name example.com;
+    server_name _;
     uploads_dir /files/uploads;
 
 #     # Autoindexering van mappen inschakelen
