Time-out working, gotta fix a new request whilst a "sleeping cgi" is already running

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ server {
 
     # Definieer de locatie van de standaardfoutpagina's
     error_page 405 /405.html;
-    error_page 500 502 503 504 /50x.html;
+    error_page 500 502 503 /50x.html;
 
     location .py {
         alias /home/cpost/Desktop/webserv/cgi-bin/;
