progress file upload

--- a/nginx.conf
+++ b/nginx.conf
@@ -126,7 +126,7 @@ server {
 #     # Definieer de locatie van de hoofdmap van je website
     root  /home/dkramer/Documents/WEBSERVfolder/webserv;
     server_name new.com;
-    uploads_dir /files/uploads;
+    uploads_dir /home/dkramer/Documents/WEBSERVfolder//files/photos;
 
 #     # Autoindexering van mappen inschakelen
     autoindex on;
