Timeout is done! (I hope (please))

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,21 +7,23 @@ server {
     # Definieer het hostadres en poortnummer voor dit serverblok
     listen 8080;
     server_name _;
-    root /home/cpost/Desktop/webserv;
+    root /home/rvan-mee/Projects/webserv;
     autoindex on;
 
     # Definieer de locatie van de standaardfoutpagina's
     error_page 405 /405.html;
-    error_page 500 502 503 /50x.html;
+    error_page 500 503 /.html;
 
     location .py {
-        alias /home/cpost/Desktop/webserv/cgi-bin/;
+        alias /home/rvan-mee/Projects/webserv/cgi-bin/;
     }
 
     # Definieer de locatie van de standaardbestanden voor directorylisting
     index index.html;
-    
-    redirect https://www.google.com;
+
+    location /redirect {
+        redirect https://www.google.com;
+    }
 
     # Definieer eventuele andere standaard configuraties
 
@@ -37,7 +39,7 @@ server {
     listen 8070;
 
 #     # Definieer de locatie van de hoofdmap van je website
-    root  /home/rvan-mee/projects/webserv;
+    root  /home/rvan-mee/Projects/webserv;
     server_name example.com;
     uploads_dir /files/uploads;
 
@@ -53,12 +55,11 @@ server {
     }
 
     location .py {
-        alias /home/rvan-mee/projects/webserv/cgi-bin/;
+        alias /home/rvan-mee/Projects/webserv/cgi-bin/;
     }
 
-    location /redirect/ {
-        redirect https://www.google.com;
-    }
+
+    redirect https://www.google.com;
 
     location /files/photos {
         allow GET; #dit is een comm;;;entaarregel;
