--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ root /webserver/www;
 server {
     # Definieer het hostadres en poortnummer voor dit serverblok
     listen 8080;
-    server_name _;
+    server_name blabla.com;
     root /home/rvan-mee/projects/webserv;
     autoindex on;
 
@@ -17,14 +17,11 @@ server {
     location .py {
         alias /home/rvan-mee/projects/webserv/cgi-bin/;
     }
-
+    redirect https://www.google.com;
     # Definieer de locatie van de standaardbestanden voor directorylisting
     index index.html;
 
-    location /redirect {
-        redirect https://www.google.com;
-    }
-
+    
     # Definieer eventuele andere standaard configuraties
 
     # Definieer de locatie van de standaard error- en access-logbestanden
@@ -82,11 +79,12 @@ server {
     }
 
     location .py {
+        allow POST;
         alias /home/dkramer/Documents/WEBSERVfolder/webserv/cgi-bin/;
     }
 
 
-    redirect https://www.google.com;
+    redirect https://www.youtube.com;
 
     location /files/photos {
         allow POST;
@@ -139,7 +137,7 @@ server {
     }
 
 
-    redirect https://www.google.com;
+    redirect https://www.youtube.com;
 
     location /files/photos {
         allow POST;
