file uploads working with c++

--- a/nginx.conf
+++ b/nginx.conf
@@ -76,6 +76,7 @@ server {
         autoindex off;
         allow GET;
         allow DELETE; #dit is een commentaarregel
+        allow POST;
     }
 
     location .py {
