Test config files

--- a/test-configs/Autoindex_error.conf
+++ b/test-configs/Autoindex_error.conf
@@ -10,16 +10,15 @@ server  {
     root /home/cpost/Desktop/webserv;
     autoindex on off; #ERROR HERE
 
-    error_page 405 /405.html;
-    error_page 500 502 503 504 /50x.html;
-
     location .py {
         alias /home/cpost/Desktop/webserv/cgi-bin/;
     }
 
     index index.html;
     
-    redirect https://www.google.com;
+    location /redirect {
+        redirect https://www.google.com;
+    }
 
     access_log /logs/access.log;
     error_log /logs/error.log;
@@ -65,13 +64,6 @@ server {
         allow GET; 
         allow POST;
         allow DELETE; 
-    }
-
-    location ~ \.py$ {
-        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
     }
 
     access_log /logs/example.com.access.log;
