--- a/test-configs/no_server_name.conf
+++ b/test-configs/no_server_name.conf
@@ -6,12 +6,9 @@ client_max_body_size 100;
 server {
 
     listen 8080;
-    server_name _;
+    server_name  ; #ERROR HERE
     root /home/cpost/Desktop/webserv;
     autoindex on;
-
-    error_page 405 /405.html;
-    error_page 500T 502 503 504 /50x.html; #Error here
 
     location .py {
         alias /home/cpost/Desktop/webserv/cgi-bin/;
@@ -40,7 +37,7 @@ server {
 
     index src/http/directory.html;
 
-    location / {
+    location /{
         autoindex off;
         allow GET;
         allow DELETE;
