--- a/test-configs/no_redirect.conf
+++ b/test-configs/no_redirect.conf
@@ -1,14 +1,20 @@
 
 listen 8080;
 root /webserver/www;
-client_max_body_size 100Y; #ERROR HERE
+client_max_body_size 100;
 
-server {
+server  {
 
     listen 8080;
     server_name _;
     root /home/cpost/Desktop/webserv;
     autoindex on;
+
+    location / {
+        autoindex off;
+        allow GET;
+        allow DELETE;
+    }
 
     location .py {
         alias /home/cpost/Desktop/webserv/cgi-bin/;
@@ -16,7 +22,7 @@ server {
 
     index index.html;
     
-    redirect https://www.google.com;
+    # redirect https://www.google.com;  #404 error
 
     access_log /logs/access.log;
     error_log /logs/error.log;
@@ -27,7 +33,6 @@ server {
 
     listen 8070;
 
-
     root  /home/rvan-mee/projects/webserv;
     server_name example.com;
     uploads_dir /files/uploads;
@@ -37,9 +42,9 @@ server {
 
     index src/http/directory.html;
 
-    location /{
+    location / {
         autoindex off;
-        allow GET;
+        # allow GET; Does Get still work?
         allow DELETE;
     }
 
@@ -64,7 +69,7 @@ server {
         allow DELETE; 
     }
 
-    location ~ \.py$ {
+    location \.py$ {
         fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
