--- a/nginx.conf
+++ b/nginx.conf
@@ -66,7 +66,7 @@ server {
 
 #     # Definieer de locatie van de hoofdmap van je website
     root  /home/dkramer/Documents/WEBSERVfolder/webserv;
-    server_name _;
+    server_name yeaha.com;
     uploads_dir /files/uploads;
 
 #     # Autoindexering van mappen inschakelen
