final bugs fixed

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,14 @@
 # Definieer de poort waarop Nginx moet luisteren
 listen 8080;
 root /webserver/www;
-# client_max_body_size 100M;
+#client_max_body_size 10000M;
+
 
 server {
     # Definieer het hostadres en poortnummer voor dit serverblok
     listen 8080;
     server_name blabla.com;
-    root /home/rvan-mee/projects/webserv;
+    root /home/dkramer/Documents/WEBSERVfolder/webserv;
     autoindex on;
 
     # Definieer de locatie van de standaardfoutpagina's
@@ -15,7 +16,7 @@ server {
     error_page 500 503 /.html;
 
     location .py {
-        alias /home/rvan-mee/projects/webserv/cgi-bin/;
+        alias /home/dkramer/Documents/WEBSERVfolder/webserv/cgi-bin/;
     }
     redirect https://www.google.com;
     # Definieer de locatie van de standaardbestanden voor directorylisting
@@ -33,7 +34,7 @@ server {
     # Definieer het hostadres en poortnummer voor dit serverblok
     listen 8080;
     server_name test.com;
-    root /home/rvan-mee/projects/webserv;
+    root /home/dkramer/Documents/WEBSERVfolder/webserv;
     autoindex on;
 
     # Definieer de locatie van de standaardfoutpagina's
@@ -41,7 +42,7 @@ server {
     error_page 500 502 503 504 /50x.html;
 
     location .py {
-        alias /home/rvan-mee/projects/webserv/cgi-bin/;
+        alias /home/dkramer/Documents/WEBSERVfolder/webserv/cgi-bin/;
     }
 
     # Definieer de locatie van de standaardbestanden voor directorylisting
@@ -65,13 +66,18 @@ server {
     listen 8070;
 
 #     # Definieer de locatie van de hoofdmap van je website
-    root  /home/rvan-mee/projects/webserv;
+    root  /home/dkramer/Documents/WEBSERVfolder/webserv;
     server_name yeaha.com;
     uploads_dir uploads/;
 
 #     # Autoindexering van mappen inschakelen
     autoindex on;
 #     # Definieer de locatie van specifieke routes
+    location /uploads{
+        autoindex off;
+        allow GET;
+        allow POST;
+    }
     location /{
         autoindex off;
         allow GET;
@@ -81,7 +87,7 @@ server {
 
     location .py {
         allow POST;
-        alias /home/rvan-mee/projects/webserv/cgi-bin/;
+        alias /home/dkramer/Documents/WEBSERVfolder/webserv/cgi-bin/;
     }
 
 
@@ -120,7 +126,7 @@ server {
     listen 8070;
 
 #     # Definieer de locatie van de hoofdmap van je website
-    root  /home/rvan-mee/projects/webserv;
+    root  /home/dkramer/Documents/WEBSERVfolder/webserv;
     server_name new.com;
     uploads_dir /home/dkramer/Documents/WEBSERVfolder/files/photos;
 
@@ -172,7 +178,7 @@ server {
     listen 8070;
 
 #     # Definieer de locatie van de hoofdmap van je website
-    root  /home/rvan-mee/projects/webserv;
+    root  /home/dkramer/Documents/WEBSERVfolder/webserv;
     server_name new2.com;
     uploads_dir /home/dkramer/Documents/WEBSERVfolder/files/photos;
 
